Fix snapping and alignment

--- a/source/stylesheets/base/_helpers.scss
+++ b/source/stylesheets/base/_helpers.scss
@@ -240,11 +240,10 @@ textarea {
 	margin-left: auto;
 }
 
-.main-container {
-	scroll-snap-type: y proximity;
+body {
+	scroll-snap-type: y mandatory;
 }
 
-main,
 .snapping-section {
 	scroll-snap-align: start;
 }
