--- a/source/stylesheets/components/_curved-section.scss
+++ b/source/stylesheets/components/_curved-section.scss
@@ -1,6 +1,17 @@
 .curved-section {
+	position: relative;
+	right: 50%;
+	left: 50%;
+
+	clear: both;
+
+	width: 100vw;
+	max-width: 100vw;
+
 	padding-top: $gutter * 3;
 	padding-bottom: $gutter * 2.5;
+	margin-right: -50vw;
+	margin-left: -50vw;
 
 	background-image: image('curved-mask__top.svg'),
 	image('curved-mask__bottom.svg');
